SONARPY-1660 Fix FP on S905 when using a decorator to declare an Airflow DAG (#1719)